cleanup, slideshow test

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,13 @@
 github: [metadata]
 theme: jekyll-theme-minimal
+defaults:
+  -
+    scope:
+      path: "_slides" 
+    values:
+      layout: "iframe"
+
+collections:
+  slides:
+    output: true
+
